# round-eliminator

./: .gitignore  Cargo.toml  README.md  compile.sh  todo.txt
problems/: 1round.txt  5col.txt  7labels.txt  diag.txt  matching.txt  mis.txt  problem.txt  semi.txt  semi2b.txt  semi3b.txt  semi4b.txt  so.txt
round-eliminator-benchmark/: Cargo.toml
round-eliminator-benchmark/src/: main.rs
round-eliminator-cli/: Cargo.toml
round-eliminator-cli/src/: main.rs
round-eliminator-lib/: Cargo.toml
round-eliminator-lib/src/: constraint.rs  directed.rs  group.rs  kpartite.rs  lib.rs  line.rs  part.rs  problem.rs  serial.rs
round-eliminator-lib/src/algorithms/: autolb.rs  autoub.rs  choices.rs  coloring_solvability.rs  critical_sets.rs  delta_edge_coloring.rs  demisify.rs  diagram.rs  discard_useless.rs  dual.rs  event.rs  fixpoint.rs  genetic.rs  group_iter.rs  harden.rs  inverse_speedup.rs  line_inclusion.rs  line_normalizer.rs  lll.rs  logstar.rs  mapping_problem.rs  marks.rs  max_clique.rs  maximize.rs  merge_equivalent.rs  merge_subdiagram.rs  mod.rs  multigraph.rs  multisets_pairing.rs  nofixpoint.rs  orientation.rs  parallel.rs  part_parser.rs  problem_triviality.rs  relax.rs  renaming.rs  speedup.rs
round-eliminator-server/: Cargo.toml
round-eliminator-server/src/: main.rs
round-eliminator-shell/: Cargo.toml
round-eliminator-shell/src/: main.rs
round-eliminator-wasm/: .gitignore  Cargo.toml  build.sh
round-eliminator-wasm/.cargo/: config
round-eliminator-wasm/src/: lib.rs
round-eliminator-wasm/www/: api.js  index.html  worker.js
round_eliminator_lib/src/: group.rs  problem.rs
round_eliminator_lib/src/algorithms/: group_iter.rs  harden.rs  line_inclusion.rs  line_normalizer.rs  merge_equivalent.rs  mod.rs  renaming.rs
server/: Cargo.toml
server/src/: cli.rs  main.rs  search.rs
simulation/: Cargo.toml
simulation/src/: auto.rs  autolb.rs  autoub.rs  bignum.rs  constraint.rs  extremalsets.rs  forall.rs  lib.rs  line.rs  lineset.rs  maxclique.rs  multispeedup.rs  problem.rs  search.rs  simpleapi.rs
src/: 3col.txt  auto.rs  autolb.rs  autoub.rs  bignum.rs  cli.rs  constraint.rs  file.rs  group.rs  line.rs  lineset.rs  main.rs  part.rs  problem.rs  simpleapi.rs
src/algorithms/: coloring_solvability.rs  diagram.rs  discard_useless.rs  event.rs  group_iter.rs  harden.rs  line_inclusion.rs  line_normalizer.rs  max_clique.rs  maximize.rs  merge_equivalent.rs  mod.rs  problem_triviality.rs  relax.rs  relax_merge.rs  renaming.rs  useless_lines.rs
static/: api.js  gui.js  index.htm  wasm.js  wasm_bg.wasm  worker.js
wasm/: Cargo.toml
wasm/src/: lib.rs
www/: .gitignore  api.js  gui.js  index.html  worker.js
