[package]
name = "simulation3"
version = "0.1.0"
authors = ["Dennis <dennis.olivetti@aalto.fi>"]
edition = "2018"


[dependencies]
uint = "0.8"
permutator = "0.3.3"
itertools = "0.8"
serde_with = "1.3"
serde = { version = '1.0', features = ['derive'] }
serde_json = "1.0"
either = "1.5"
clap = "2.33"