[package]
name = "round-eliminator-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
contest-algorithms = "0.3.0"
permutator = "0.4.0"
log = "0.4"
env_logger = "0.9.0"
petgraph = "0.6.0"
