[package]
name = "round-eliminator-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
round-eliminator-lib = {path = "../round-eliminator-lib"}
sha256 = "1.5.0"
clap = { version = "4.3.2", features = ["derive"] }
num_cpus = "1.0"

[profile.release]
debug = true 

[profile.test]
debug = true

[profile.bench]
debug = true