[package]
name = "round-eliminator-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
round-eliminator-lib = {path = "../round-eliminator-lib", default-features = false, features = ["onlyrust"]}
sha256 = "1.5.0"
clap = { version = "4.3.2", features = ["derive"] }
num_cpus = "1.0"


[profile.release]
debug = true 
lto = "fat"

[profile.test]
debug = true

[profile.bench]
debug = true

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc = "0.1.43"
libmimalloc-sys = {version="0.1.39", features=["extended"]}

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.6"
