[package]
name = "round-eliminator-lib"
version = "0.1.0"
authors = ["Dennis"]
edition = "2021"

[dependencies]
itertools = "0.10"
contest-algorithms = "0.3.0"
permutator = "0.4.0"
log = "0.4"
env_logger = "0.9.0"
petgraph = "0.6.0"
streaming-iterator = { version = "0.1.5", features = ["std"]}
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
chashmap = "2.2.2"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"
num_cpus = "1.0"
append-only-vec = "0.1.2"