[package]
name = "round-eliminator-lib"
version = "2.0.8"
authors = ["Dennis"]
edition = "2021"

[dependencies]
itertools = "0.13"
contest-algorithms = "0.3"
#permutator = "0.4.0"
permutator = {git = "https://github.com/olidennis/permutator.git"}
log = "0.4"
env_logger = "0.11"
petgraph = "0.6"
streaming-iterator = { version = "0.1.9", features = ["std"]}
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
dashmap = "6.0"
crossbeam = "0.8"
crossbeam-channel = "0.5"
num_cpus = "1.16"
append-only-vec = "0.1"
rayon = "1.10"
rustsat = "0.5"
chrono = "0.4"
bit-vec = "0.8"
bnf = "0.5"
parking_lot = "0.12"
varisat = { version = "0.2", optional = true }
rustsat-minisat = { version = "0.3", optional = true }
sha256 = {version = "1.5.0", default-features = false }
bincode = "1.3.3"
lz4_flex = "0.11.3"
anyhow = "1.0"
genevo = "0.7.1"

[features]
default = ["all"]
onlyrust = ["dep:varisat"]
all = ["dep:rustsat-minisat"]

[profile.release]
debug = true 

[profile.test]
debug = true

[profile.bench]
debug = true

