[package]
name = "round-eliminator-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.5"
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
round-eliminator-lib = {path = "../round-eliminator-lib"}
futures = "0.3.18"

[profile.release]
debug = true
