[package]
name = "round-eliminator-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.5"
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
round-eliminator-lib = {path = "../round-eliminator-lib"}
futures = "0.3.18"
num_cpus = "1.16"

[profile.release]
debug = true
lto = "fat"

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc = "0.1.43"
libmimalloc-sys = {version="0.1.39", features=["extended"]}

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.6"