[package]
name = "round-eliminator-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
round-eliminator-lib = {path = "../round-eliminator-lib", default-features = false, features = ["onlyrust"]}
itertools = "0.13"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
miniz_oxide = "0.8.5"
base64 = "0.22.1"
indicatif = "0.17.11"
termgraph = "0.4.0"

[profile.release]
debug = true 
lto = "fat"

[profile.test]
debug = true

[profile.bench]
debug = true

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc = "0.1.43"
libmimalloc-sys = {version="0.1.39", features=["extended"]}

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.6"
