[package]
name = "server"
version = "0.1.0"
authors = ["Dennis <dennis.olivetti@aalto.fi>"]
edition = "2018"

[dependencies]
simulation = { path = "../simulation" }
clap = "2.33"
warp = "0.1"
futures-preview = { version = "0.3.0-alpha.14", features = ["compat"] }
futures01 = { package = "futures", version = "0.1" }
futures-cpupool = "0.1"
env_logger = "0.7.1"