[package]
name = "simulation"
version = "0.3.0"
authors = ["Dennis <dennis.olivetti@aalto.fi>"]
edition = "2018"


[dependencies]
uint = "0.8"
permutator = "0.3.3"
itertools = "0.8"
serde_with = "1.3"
serde = { version = '1.0', features = ['derive'] }
serde_json = "1.0"
either = "1.5"
log = "0.4"
num-bigint = "0.2.6"
stacker = "0.1.12"
