[package]
name = "wasm"
version = "0.1.0"
authors = ["Dennis <dennis.olivetti@aalto.fi>"]
edition = "2018"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
simulation = { path = "../simulation",features = ["littlemem"] }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]

#[profile.release]
#opt-level = "s"
